added basic layout

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ theme:
     logo: material/sword-cross
   favicon: 'material/library'
   font:
-    text: "EB Garamond"
+    text: Roboto
     code: "Fira Code"
   features:
     - navigation.footer
