--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ theme:
         icon: material/brightness-4
         name: Switch to light mode
   icon:
-    logo: material/architecture
+    logo: material/crossed-swords
   favicon: 'material/library'
   font:
     text: Roboto
